--- a/grades/templates/grades/index.html
+++ b/grades/templates/grades/index.html
@@ -15,7 +15,7 @@
 
 <body class = "bruh">
     <nav class="navbar navbar-expand-lg navbar-dark" style="background: #3B8DE1;">
-        <a class="navbar-brand" href="..">asd-dash</a>
+        <a class="navbar-brand" href="/">asd-dash</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
           aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
