--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -74,8 +74,8 @@
 			<div class="page-content page-container" id="page-content">
 				<div class="padding">
 					<div class="row container d-flex justify-content-center">
-						<div class="col-lg-12">
-							<div class="card px-3">
+						<div class="col-xl-16">
+							<div class="card px-1">
 								<div class="card-body">
 									<h4 class="card-title">Todo list</h4>
 
@@ -92,7 +92,7 @@
 												<div style = "margin: auto; margin-left: 50px;">
 													<span class="input-group-btn">
 														<button type="submit"
-															class="add btn btn-primary font-weight-bold todo-list-add-btn">ADD</button>
+															class="add btn btn-primary font-weight-bold todo-list-add-btn">ADD TODO</button>
 														<div class="btn-group">
 															<a href="{% url 'deletecomplete' %}"><button type="button"
 																	class="btn btn-warning">
@@ -110,7 +110,12 @@
 											</div>
 										</div>
 									</form>
+									<div><p>
 
+									</p></div>
+									<div>
+									<p align="center">Click on an item in your Todo List to mark it as complete</p>
+									</div>
 									<div class="card-group" style = "margin-top: 20px;">
 										<div class="card text-center" style="width: 18rem;">
 											<div class="card-header">
