--- a/grades/templates/grades/indCourse.html
+++ b/grades/templates/grades/indCourse.html
@@ -114,7 +114,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background: #3B8DE1;">
-        <a class="navbar-brand" href="..">asd-dash</a>
+        <a class="navbar-brand" href="/">asd-dash</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
           aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -161,7 +161,7 @@
       </nav>
     {% if user.is_authenticated %}
 
-    <div class="container" style = "margin-top: 1%;">
+    <div class="container" style = "margin-top: 2%;" id = "container2">
         <!-- <div id="curve_chart" style="width: 900px; height: 500px"></div> -->
 
         {% if indCourse %}
