--- a/grades/templates/grades/index.html
+++ b/grades/templates/grades/index.html
@@ -9,11 +9,16 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="{% static 'grades/styles.css' %}" />
+    
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="{% static 'grades/styles.css' %}" />
 </head>
 
 <body class = "bruh">
+   
+    
+    {% if user.is_authenticated %}
     <nav class="navbar navbar-expand-lg navbar-dark" style="background: #3B8DE1;">
         <a class="navbar-brand" href="..">asd-dash</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
@@ -60,12 +65,11 @@
           </ul>
         </div>
       </nav>
-    {% if user.is_authenticated %}
     <div class="container">
-        <div class="container">
-            <div class="container" style = "margin-top: 3%;">
-                <h4 class="display-4" style="text-align: center; font-size: 45px;">Welcome {{ user.get_short_name }}</h4>
-                <h4 class="display-4" style="text-align: left; font-size:30px; ">Here are your courses:</h4>
+        <div class="container" >
+            <div class="container"  id = "container2">
+                <h4 class="display-4" style="text-align: left; font-size: 40px;">Welcome, {{ user.get_short_name }}</h4>
+                <h4 class="display-4" style="text-align: left; font-size:28px; ">Here are your courses:</h4>
                 {% if course_list %}
                 <ul class="list-group">
                     {% for course in course_list %}
@@ -151,6 +155,7 @@
     </div>
     {% endif %}
     {% else %}
+    
     <h1>Please log in to see your Personal Dashboard</h1>
     <a href="{% url 'social:begin' 'google-oauth2' %}">
         Login
