--- a/calendarMod/templates/calendar/base.html
+++ b/calendarMod/templates/calendar/base.html
@@ -50,7 +50,7 @@
   .btn {
     outline: none;
     color: black;
-    background-color: transparent;
+    background-color: white;
     box-shadow: 0 0 0 0;
     border: 2px solid #17a2b8;
   }
