--- a/grades/templates/grades/index.html
+++ b/grades/templates/grades/index.html
@@ -5,22 +5,19 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
 <!DOCTYPE html>
 <html>
 
 <head>
-    
-    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'grades/styles.css' %}" />
 </head>
 
 <body class = "bruh">
    
-    
-    {% if user.is_authenticated %}
     <nav class="navbar navbar-expand-lg navbar-dark" style="background: #3B8DE1;">
-        <a class="navbar-brand" href="..">asd-dash</a>
+        <a class="navbar-brand" href="..">Dash</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
           aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -65,6 +62,28 @@
           </ul>
         </div>
       </nav>
+
+<!-- Logout Modal-->
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+aria-hidden="true">
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+      <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">×</span>
+      </button>
+    </div>
+    <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+    <div class="modal-footer">
+      <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+      <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
+    </div>
+  </div>
+</div>
+</div>
+{% if user.is_authenticated %}
+
     <div class="container">
         <div class="container" >
             <div class="container"  id = "container2">
