--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -14,7 +14,7 @@
 	<title>To-do View </title>
 
 	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="{% static 'todo/bs/css/flatly.min.css' %}" />
 	<link rel="stylesheet" href="{% static 'todo/styles.css' %}" />
@@ -22,7 +22,7 @@
 
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark" style="background: #3B8DE1;">
-		<a class="navbar-brand" href="..">asd-dash</a>
+		<a class="navbar-brand" href="..">Dash</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
 		  aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
@@ -59,7 +59,7 @@
 	
 				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
 				  <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-				  Logout
+				  Logout asdfasdf
 				</a>
 			  </div>
 			</li>
@@ -67,10 +67,31 @@
 		  </ul>
 		</div>
 	  </nav>
+
+	  <!-- Logout Modal-->
+<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+aria-hidden="true">
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+      <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">×</span>
+      </button>
+    </div>
+    <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+    <div class="modal-footer">
+      <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+      <a class="btn btn-primary" href="{% url 'logout' %}">Logout</a>
+    </div>
+  </div>
+</div>
+</div>
+
 	<div class="container">
 		
 		<div class="container-fluid" id="wrapper">
-			{% if user.is_authenticated %}
+			{% if user.is_authenticated %}			
 			<div class="page-content page-container" id="page-content">
 				<div class="padding">
 					<div class="row container d-flex justify-content-center">
@@ -203,6 +224,8 @@
 				</div>
 			</div>
 		</div>
+
+		
 	</div>
 
 
@@ -213,13 +236,6 @@
 		Login
 	</a>
 	{%endif%}
-
-	<footer>
-		<div class="row pad">
-			<div class="col-lg-12 text-center">
-				Copyright &copy; Dash 2020
-			</div>
-		</div>
 
 	</footer>
 
