--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -60,7 +60,7 @@
 	
 				<a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
 				  <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-				  Logout asdfasdf
+				  Logout 
 				</a>
 			  </div>
 			</li>
@@ -326,7 +326,15 @@ aria-hidden="true">
 	{%endif%}
 
 	</footer>
-
+	
 </body>
-
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+	integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+	crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+	integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+	crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+	integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+	crossorigin="anonymous"></script>
 </html>
