--- a/calendarMod/templates/calendar/base.html
+++ b/calendarMod/templates/calendar/base.html
@@ -46,7 +46,13 @@
     float: right;
   }
 
-  .btn {
+  #bruh2:hover{
+    color: white;
+    background-color:  #17a2b8;
+   /* background: linear-gradient(45deg, #093233, #fc00ff);; */
+}
+
+  #bruh2 {
     outline: none;
     color: black;
     background-color: white;
@@ -106,7 +112,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark" style = "background: #3B8DE1;">
-    <a class="navbar-brand" href="">Dash</a>
+    <a class="navbar-brand" href="/">Dash</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
